--- a/VivenciaDaInfo/src/assets/main.css
+++ b/VivenciaDaInfo/src/assets/main.css
@@ -1,7 +1,7 @@
 @import "./base.css";
 
 .calc{
-  border: 3px solid #8a88ff;
+  border: 3px solid #db066a;
   padding: 30px;
   max-width: 830px;
   display: block;
@@ -28,7 +28,7 @@ input, select{
   padding-left: 10px;
 }
 strong {
-  text-decoration: underline solid #8a88ff;
+  text-decoration: underline solid #db066a;
 }
 span{
   margin-left: 5px;
@@ -37,12 +37,12 @@ label{
   font-size: 1.1em;
 }
 .resultado {
-  background-color: #8a88ff;
+  background-color: #db066a;
   display: flex;
   padding: 30px;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 .resultado span {
   font-size: 2em;
